更新 合作團隊 內容資料

--- a/Desktop/合作團隊/VR串聯海上桃花源/亮點成果.html
+++ b/Desktop/合作團隊/VR串聯海上桃花源/亮點成果.html
@@ -11,12 +11,12 @@
                 <div class="col-12 col-lg-7 mt-5 mt-lg-0">
                     <div class="d-flex flex-column bd-highlight pl-3 mb-3">
                         <div class="collaborative-partner-highlight-content-title">
-                            <p>跨域全齡商品設計開發</p>
+                            <p>內容待補</p>
                         </div>
 
                         <div class="collaborative-partner-highlight-content">
                             <p class="ellipsis-line-5">
-                                「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
+                                內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。
                             </p>
                         </div>
 
@@ -35,12 +35,12 @@
                 <div class="col-12 col-lg-7 mt-5 mt-lg-0">
                     <div class="d-flex flex-column bd-highlight pl-3 mb-3">
                         <div class="collaborative-partner-highlight-content-title">
-                            <p>原住民安居構築與綠色樂業推動計畫</p>
+                            <p>內容待補</p>
                         </div>
 
                         <div class="collaborative-partner-highlight-content">
                             <p class="ellipsis-line-5">
-                                「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
+                                內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。
                             </p>
                         </div>
 
@@ -55,16 +55,16 @@
             <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
                 data-aos-duration="1000">
                 <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
-                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/4.png);"></div>
+                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png);"></div>
                 <div class="col-12 col-lg-7 mt-5 mt-lg-0">
                     <div class="d-flex flex-column bd-highlight pl-3 mb-3">
                         <div class="collaborative-partner-highlight-content-title">
-                            <p>原住民安居構築與綠色樂業推動計畫</p>
+                            <p>內容待補</p>
                         </div>
 
                         <div class="collaborative-partner-highlight-content">
-                            <p class="ellipsis-line-4">
-                                「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
+                            <p class="ellipsis-line-5">
+                                內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。
                             </p>
                         </div>
 
