--- a/Desktop/合作團隊/木創文化攪動深根計畫/心得回饋.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/心得回饋.html
@@ -7,13 +7,13 @@
             <div class="d-flex flex-column align-items-center">
                 <img alt="心得作者照片" height="174" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/675109942.png"
                     width="174" />
-                <span class="collaborative-partner-feedback-author">孫同學</span>
+                <span class="collaborative-partner-feedback-author">同學 A</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="left-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(0)" style="cursor: pointer;">
-                在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
+                心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補。
             </p>
         </div>
         <div class="col-xl-2 d-none d-xl-block"></div>
@@ -26,20 +26,20 @@
             <div class="d-flex flex-column align-items-center">
                 <img alt="心得作者照片" height="174" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/411645215.png"
                     width="174" />
-                <span class="collaborative-partner-feedback-author">游同學</span>
+                <span class="collaborative-partner-feedback-author">同學 B</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
             <div class="right-triangle d-none d-xl-block"></div>
             <p class="collaborative-partner-feedback-content" onclick="showFeedbackModal(1)" style="cursor: pointer;">
-                在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。
+                心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補心得待補。
             </p>
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
                 <img alt="心得作者照片" height="174" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/411645215.png"
                     width="174" />
-                <span class="collaborative-partner-feedback-author">游同學</span>
+                <span class="collaborative-partner-feedback-author">同學 B</span>
             </div>
         </span>
     </div>
@@ -107,13 +107,13 @@
     const collaborativePartnerFeedbacks = [
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/675109942.png',
-            'name': '孫同學',
-            'content': '在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。',
+            'name': '同學 A',
+            'content': '心得待補。',
         },
         {
             'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/411645215.png',
-            'name': '游同學',
-            'content': '在參與解決地方痛點的過程中，從一開始的茫茫然，到經過老師們的一翻指導，已開始上手知道要去哪找問題與找資源，而在這尋找的過程中也漸漸的學到蠻多的東西，如：地方魚塭的經營模式、地方人對當地溼地建設的看法等，且透過口湖地方場域的深耕經營，也了解了地方很多的過往與特色。',
+            'name': '同學 B',
+            'content': '心得待補。',
         }
     ];
 
