--- a/Desktop/合作團隊/青銀共創．友善療癒綠社區/SDGs關聯目標.html
+++ b/Desktop/合作團隊/青銀共創．友善療癒綠社區/SDGs關聯目標.html
@@ -4,11 +4,11 @@
 
         <div class="sdg-container w-100">
             <div class="d-flex justify-content-center">
-                <img alt="SDGs" class="sdg-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3372/3.png"
-                    data-aos="flip-up" style="width: 15%;" />
-                <img alt="SDGs" class="sdg-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/Image4.png"
+                <img alt="SDGs" class="sdg-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3373/3.png"
+                    data-aos="flip-up" />
+                <img alt="SDGs" class="sdg-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3373/4.png"
                     data-aos="flip-up" data-aos-delay="300" />
-                <img alt="SDGs" class="sdg-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/SDG_11.png"
+                <img alt="SDGs" class="sdg-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3373/11.png"
                     data-aos="flip-up" data-aos-delay="600" />
             </div>
         </div>
