--- a/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/合作團隊成員.html
+++ b/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/合作團隊成員.html
@@ -3,7 +3,8 @@
     <div class="collaborative-partner-member-content-container w-100">
         <div class="row text-center justify-content-around">
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
+                    onclick="showPartnerMemberModal(0)" style="cursor: pointer;">
                     <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png" alt="成員照片" width="174"
                         height="174">
                     <p class="collaborative-partner-member-content-name">黃志弘 院長</p>
@@ -11,7 +12,8 @@
                 </div>
             </div>
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
+                    onclick="showPartnerMemberModal(1)" style="cursor: pointer;">
                     <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="成員照片" width="174"
                         height="174">
                     <p class="collaborative-partner-member-content-name">陳建文 主任</p>
@@ -19,7 +21,8 @@
                 </div>
             </div>
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
+                    onclick="showPartnerMemberModal(2)" style="cursor: pointer;">
                     <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="成員照片" width="174"
                         height="174">
                     <p class="collaborative-partner-member-content-name">陳圳卿 副教授</p>
@@ -27,7 +30,8 @@
                 </div>
             </div>
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
+                    onclick="showPartnerMemberModal(3)" style="cursor: pointer;">
                     <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="成員照片" width="174"
                         height="174">
                     <p class="collaborative-partner-member-content-name">黃光廷 助理教授</p>
@@ -35,7 +39,8 @@
                 </div>
             </div>
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
+                    onclick="showPartnerMemberModal(4)" style="cursor: pointer;">
                     <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="成員照片" width="174"
                         height="174">
                     <p class="collaborative-partner-member-content-name">李魁鵬 副教授</p>
@@ -43,7 +48,8 @@
                 </div>
             </div>
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
+                    onclick="showPartnerMemberModal(5)" style="cursor: pointer;">
                     <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="成員照片" width="174"
                         height="174">
                     <p class="collaborative-partner-member-content-name">黃儀婷 副教授</p>
@@ -51,7 +57,8 @@
                 </div>
             </div>
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left">
+                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
+                    onclick="showPartnerMemberModal(6)" style="cursor: pointer;">
                     <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="成員照片" width="174"
                         height="174">
                     <p class="collaborative-partner-member-content-name">羅恩加 博士</p>
