更新 校內下載

--- a/Desktop/檔案下載/校內下載.html
+++ b/Desktop/檔案下載/校內下載.html
@@ -5,115 +5,84 @@
         line-height: 1.32;
     }
 
+    td {
+        padding: 20px 10px !important;
+    }
+
+    #pageBackground {
+        background: url('https://osausr.ntut.edu.tw/var/file/1/1001/img/3364/630057451.png');
+        width: 100vw;
+        height: 1233px;
+        position: fixed;
+        top: 0;
+        z-index: -1;
+    }
+
     #fileDownloadTitle {
-        font-family: SegoeUI;
+        font-family: "SegoeUI";
         font-size: 45px;
         color: #4998b2;
+        margin-bottom: 60px;
     }
 </style>
-<div class="container bg-light my-3 p-5" style="min-height: 80vh;">
+<div id="pageBackground"></div>
+<div class="container my-5 p-5" style="min-height: 80vh; min-width: 75vw;">
     <div class="row">
         <h1 id="fileDownloadTitle" class="py-5 text-center w-100">檔案下載 - 校內</h1>
     </div>
-    <div class="row table-responsive">
+    <div class="row table-responsive m-0">
         <table class="table">
             <thead>
                 <tr>
                     <th scope="col" class="text-nowrap">日期</th>
                     <th scope="col" class="text-nowrap">標題</th>
-                    <th scope="col" class="text-nowrap">載點</th>
+                    <th scope="col" colspan="2" class="text-nowrap">載點</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td class="text-nowrap">2020-08-14</td>
-                    <td>在地「富育」計畫書 01</td>
+                    <td class="text-nowrap">2020-11-12</td>
+                    <td>110年度USR種子計畫徵件辦法</td>
                     <td>
-                        <div class="row">
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-danger text-decoration-none" target="_blank">
-                                    <i class="far fa-file-pdf fa-lg"></i>
-                                </a>
-                            </div>
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-primary text-decoration-none" target="_blank">
-                                    <i class="fas fa-file-word fa-lg"></i>
-                                </a>
-                            </div>
-                        </div>
+                        <a href="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/362298183.pdf"
+                            class="text-danger text-decoration-none" target="_blank">
+                            <i class="fas fa-file-pdf fa-lg"></i>
+                        </a>
                     </td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td class="text-nowrap">2020-08-13</td>
-                    <td>在地「富育」計畫書 02</td>
+                    <td class="text-nowrap">2020-11-12</td>
+                    <td>110年度USR種子計畫徵件辦法_附件_計劃書格式</td>
                     <td>
-                        <div class="row">
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-danger text-decoration-none" target="_blank">
-                                    <i class="far fa-file-pdf fa-lg"></i>
-                                </a>
-                            </div>
-                            <div class="col-6 p-0"></div>
-                        </div>
+                        <a href="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/724347378.docx"
+                            class="text-primary text-decoration-none" target="_blank">
+                            <i class="fas fa-file-word fa-lg"></i>
+                        </a>
                     </td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td class="text-nowrap">2020-08-12</td>
-                    <td>在地「富育」計畫書 03</td>
+                    <td class="text-nowrap">2020-11-12</td>
+                    <td>109年北科大USR Hub期中報告【USR Hub 期中報告_計畫名稱】格式</td>
                     <td>
-                        <div class="row">
-                            <div class="col-6 p-0"></div>
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-primary text-decoration-none" target="_blank">
-                                    <i class="fas fa-file-word fa-lg"></i>
-                                </a>
-                            </div>
-                        </div>
+                        <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/628391463.docx"
+                            class="text-primary text-decoration-none" target="_blank">
+                            <i class="fas fa-file-word fa-lg"></i>
+                        </a>
                     </td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td class="text-nowrap">2020-08-11</td>
-                    <td>在地「富育」計畫書 04</td>
+                    <td class="text-nowrap">2020-11-12</td>
+                    <td>109年北科大USR Hub期中報告【USR計畫資料收集表單_計畫名稱】格式</td>
                     <td>
-                        <div class="row">
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-danger text-decoration-none" target="_blank">
-                                    <i class="far fa-file-pdf fa-lg"></i>
-                                </a>
-                            </div>
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-primary text-decoration-none" target="_blank">
-                                    <i class="fas fa-file-word fa-lg"></i>
-                                </a>
-                            </div>
-                        </div>
+                        <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/857162777.xlsx"
+                            class="text-success text-decoration-none" target="_blank">
+                            <i class="fas fa-file-excel fa-lg"></i>
+                        </a>
                     </td>
-                </tr>
-                <tr>
-                    <td class="text-nowrap">2020-08-10</td>
-                    <td>在地「富育」計畫書 05</td>
-                    <td>
-                        <div class="row">
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-danger text-decoration-none" target="_blank">
-                                    <i class="far fa-file-pdf fa-lg"></i>
-                                </a>
-                            </div>
-                            <div class="col-6 p-0">
-                                <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3168/01.pdf"
-                                    class="text-primary text-decoration-none" target="_blank">
-                                    <i class="fas fa-file-word fa-lg"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
