更新 合作團隊 原住民部落安居構築與綠色樂業推動計畫

--- a/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/亮點成果.html
+++ b/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/亮點成果.html
@@ -11,12 +11,12 @@
                 <div class="col-12 col-lg-7 mt-5 mt-lg-0">
                     <div class="d-flex flex-column bd-highlight pl-3 mb-3">
                         <div class="collaborative-partner-highlight-content-title">
-                            <p>專業服務成果－宇老攤商形象改造</p>
+                            <p>內容待補</p>
                         </div>
 
                         <div class="collaborative-partner-highlight-content">
                             <p class="ellipsis-line-5">
-                                課程於107-108年期間，透過帶領學生參與實體銷售空間改造計畫，結合課程設計，由建築系團隊規劃，帶領學生完成部落空間改造，並且運用部落當地特有的材料，完成市集場地布置，成功改造宇老商圈整體意象。在實務操作的過程當中，學生也遭遇到很多理論與實務的課題並一一克服，為後續的學習態度與就業留下深刻的經驗
+                                內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。
                             </p>
                         </div>
 
@@ -35,12 +35,12 @@
                 <div class="col-12 col-lg-7 mt-5 mt-lg-0">
                     <div class="d-flex flex-column bd-highlight pl-3 mb-3">
                         <div class="collaborative-partner-highlight-content-title">
-                            <p>原住民安居構築與綠色樂業推動計畫</p>
+                            <p>內容待補</p>
                         </div>
 
                         <div class="collaborative-partner-highlight-content">
                             <p class="ellipsis-line-5">
-                                「跨域全齡商品設計開發」課程由計畫共同主持人張若菡老師開設，透過通路廠商進行產業命題「樂齡健腦桌遊」，並與臺大職能治療學系、D-school臺大創新設計學院進行跨校跨域課程合作。
+                                內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。
                             </p>
                         </div>
 
@@ -55,16 +55,16 @@
             <div class="collaborative-partner-highlight-content-container row" data-aos="flip-left"
                 data-aos-duration="1000">
                 <div class="col-12 col-lg-5 d-flex justify-content-center collaborative-partner-highlight-content-image"
-                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/4.png);"></div>
+                    style="background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/3.png);"></div>
                 <div class="col-12 col-lg-7 mt-5 mt-lg-0">
                     <div class="d-flex flex-column bd-highlight pl-3 mb-3">
                         <div class="collaborative-partner-highlight-content-title">
-                            <p>部落空間再造－宇老直賣所工作坊</p>
+                            <p>內容待補</p>
                         </div>
 
                         <div class="collaborative-partner-highlight-content">
-                            <p class="ellipsis-line-4">
-                                源自「共好」的初衷，109於年暑期間辦理學生實務工作坊，由北科建築吳南葳老師與宜蘭木本設計李國玄老師帶領，在石磊宇老商圈的觀景平台上搭建小型部落「直賣所」，除了實用性及平台得天獨厚的地理優勢，希望在欣賞美景休息之餘，可以將觀光客留在平台上，選購部落的農特產、工藝，為平台增添話題性，也可以為在地部落小農增加更多的曝光度，回饋在地。
+                            <p class="ellipsis-line-5">
+                                內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補內容待補。
                             </p>
                         </div>
 
