合作團隊 原住民 資料更新

--- a/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/心得回饋.html
+++ b/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/心得回饋.html
@@ -5,8 +5,8 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/1.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/597970103.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">互動三: 賴育琳</span>
             </div>
         </span>
@@ -49,8 +49,8 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/5.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/511831875.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">互動三: 彭家駒</span>
             </div>
         </span>
@@ -67,8 +67,8 @@
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/5.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/511831875.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">互動三: 彭家駒</span>
             </div>
         </span>
@@ -78,8 +78,8 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/103680726.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">互動三: 張凱智</span>
             </div>
         </span>
@@ -102,8 +102,8 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/712057524.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">互動三: 唐齊</span>
             </div>
         </span>
@@ -119,8 +119,8 @@
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/712057524.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">互動三: 唐齊</span>
             </div>
         </span>
@@ -130,8 +130,8 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/7.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/249129036.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 陳淨妤</span>
             </div>
         </span>
@@ -155,8 +155,8 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片"
+                    width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 邱品瑄</span>
             </div>
         </span>
@@ -174,8 +174,8 @@
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片"
+                    width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 邱品瑄</span>
             </div>
         </span>
@@ -185,8 +185,8 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/819619467.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 張可欣</span>
             </div>
         </span>
@@ -210,8 +210,8 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/9.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/354702157.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 邵翊庭</span>
             </div>
         </span>
@@ -226,8 +226,8 @@
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/9.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/354702157.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 邵翊庭</span>
             </div>
         </span>
@@ -237,8 +237,8 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/664743808.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建都所: 胡維哲</span>
             </div>
         </span>
@@ -311,12 +311,16 @@
         border-width: 40px 0 40px 70px;
         border-color: transparent transparent transparent #ffffff;
     }
+
+    .student-avatar {
+        border-radius: 50%;
+    }
 </style>
 
 <script>
     const collaborativePartnerFeedbacks = [
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/1.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/597970103.jpg',
             'name': '互動三：賴育琳',
             'content': `很高興可以參與這次新竹USR計畫
                     這次主要負責的是協助AR發想
@@ -343,7 +347,7 @@
                     是很特別的體驗`
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/5.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/511831875.jpg',
             'name': '互動三: 彭家駒',
             'content':
                 `這次的經驗，除了能更加了解當地居民的農作外，對於之前沒有實際看到空拍機實飛到的我來說，感到新奇，這裡要感謝思寰學長的專業和認真的態度，因為空拍機綁上360相機後，有時會變的很不穩定，能順利的拍完，真的是一件不簡單的事。
@@ -353,7 +357,7 @@
                     這幾天也要感謝事前幫我們規劃行程的羅敏和婕文，以及在當地供應我們吃住和通車的隊長和羅爸媽一家，最後也感謝usr的夥伴們能有良好的團隊關係，這四天的行程大家辛苦了。`
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/103680726.jpg',
             'name': '互動三: 張凱智',
             'content':
                 `首先先要感謝教育部的USR計畫才讓我們有了這次的機會可以增廣我們的見聞，也感謝羅敏學姊在各方面所提供的建議與思寰學長提供的空拍技術幫助我們完成這次的計畫。
@@ -363,7 +367,7 @@
                     事後我甚至會去思考，除了我們拍攝的360影片與宣傳AR外，是不是有其他的方法能夠讓其他人像我們一樣去更加地了解他們的生活，所以我想「了解差異」可能就是我這次所學到的最重要的課題吧!`
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/712057524.jpg',
             'name': '互動三: 唐齊',
             'content':
                 `其中一天隊長請學長超早起來為了拍馬力光瀑布在上去的水系。我以為隊長只是好奇在上去還有沒有瀑布或是更美的風景，後來才知道原來隊長是在尋找部落幾年後的水源。平常我在家裡打開水龍頭在會有水，往左轉就會有熱水，沒有一天會因為水而感到擔心緊張。但部落生活讓我知道平常不以為意的資源是這麼的珍貴。
@@ -375,11 +379,13 @@
         },
 
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/7.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/249129036.jpg',
             'name': '建築系:　陳淨妤',
             'content':
                 `仲夏之月將至尾聲，已是暑期過半，社交軟體上忽然傳來一則簡訊，XX,是否有興趣參加義竹工作營，我查看了簡章的內容心中蠢蠢欲動，在喧囂的大都市待久了，不免嚮往鄉村山上的自然清新，但嚮往的事情總是無法如願的順利，在此之前已經接下了另一項工作，查看日期後有一半的時間是衝突的，因此初始我委婉的拒絕了，再後來試著詢問是否可以將另一邊的事部分日子請假，我想若是將時間分配，利用好排除兩件事之外的時間便加以利用，或許可以同時參與兩個活動，充實自我，衡量後我立即送出了訊息答應了！
+                
                 行前了解後，翌日我們到了新竹尖石山的宇老平台旁，雖然一路顛簸，但在下車後眼前群山連綿空氣沁人心脾，暈車的不適頓時消散 ，下午我們開始做基地測量，午後的太陽不見減弱，第一次在這個工作營我們展現了團隊的合作力量，另外令我深有感觸的是現場實做的那幾日，說實話與開始臆測的工作畫面南轅北轍，第一日上工看見老師全副武裝遮陽工具齊全，對比下來:遮陽帽、袖套、毛巾、長褲當時的我心想沒這樣誇張吧！殊不知當日工作結束後赤裸的皮膚部分被曬得通紅，隔日，我學乖了戴上了遮陽毛總算使雙眼不至於直視豔陽，那日下午漸漸起了白霧，遠處的山景籠罩在一層縹渺的輕紗里，連原先的烈日也隱去了它鮮艷明朗的臉，大自然被蒙上朦朧的神祕，工作的心情也不禁愉悅了起來，那日的山景至今清晰記得......。
+                
                 傍晚回到部落，我們坐在卡車後方，路途起伏卻帶著歡笑，進到部落時看見前方炊煙裊裊聲升起，我們要體驗原住民烤肉，串肉籤是砍下沒多久的新鮮竹子削出來的，火是將竹子砍下一節節親手升起來的，自給自足的感覺真好！那夜載歌載舞、談笑風聲，工作營結束了，回憶、學習技能與成長也留存於腦海深處，每每想起嘴角總不自覺上揚。
                 `,
         },
@@ -399,7 +405,7 @@
                 在這次工作營中，每個環節都令我有不一樣的收穫。擁有了這次特別的經驗，讓我能在往後做設計時，思考到更多不同層面的事情，也讓我知道做設計並不在工作室埋頭苦幹的畫圖、做模型，多出去體驗不同文化、跳脫原本的舒適圈，累積生活經驗，才是有益提升自己設計的！`,
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/819619467.jpg',
             'name': '建築系: 張可欣',
             'content':
                 `這次工作坊是由學校老師——吳南威老師，透過南威老師在群組宣傳，我才知道這次的工作坊，加上我也不能回國，索性參加這次的工作坊。參加這次的工作坊十分有趣，是一個不錯實際構想與操作的體驗。
@@ -412,7 +418,7 @@
                 很慶幸我能參與這次 USR 的工作坊計劃，很喜歡實際操作的部分，瞭解各 種材料，讓我學習很多新的知識。希望下個暑假有機會也能夠參加類似的工作坊。`,
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/9.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/354702157.jpg',
             'name': '建築系: 邵翊庭',
             'content':
                 `能參與到這個暑假的USR工作坊計畫，對我而言也許會是在就學期間數一數二重要的經驗與時光。這次工作營從基地、業主、設計到施工都是最真實的存在，不管在哪一個階段都讓我學到許多，如何精準抓到業主需求、提案的敘述方式、說服業主的技巧、多人合作的設計、材料特性和放樣方式如何影響設計、甚至是施工的竅門等等，這些對我而言都是難得的經驗、但若要說最印象深刻的，那一定是那幾天住在部落的生活。
@@ -424,7 +430,7 @@
                 一朵小巧可愛的小花可以帶動人們改變一個環境，也許建築正是這樣的一個角色，而我們努力來回檢討著自己的設計，希望創造一朵能引起人們共鳴與改變的小花。`,
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/664743808.jpg',
             'name': '建都所　胡維哲',
             'content': `這次工作坊整個流程大概費時1個月左右，前期設計階段算是最艱困的，跟夥伴磨合及建立共同語言的過程有點辛苦，中期開始有匯報進度壓力時反而比較有目標，部落的反饋也讓設計產出更有效率，其中反覆的討論也讓設計端的我們對部落這個陌生的地方有更深的了解。後期在施工階段是我覺得最有趣的部分，和之後的使用者一起自建然後同時想像他們之後的使用狀態是是前所未有的經驗。在現場施工的那幾天也看到很多部落因為交通不便產生的困境同時也有很多潛在的需求，空間設計能解決的事情也很有限，但看起來族人都很團結，這個作坊應該會是部落重新被認識的一個開端。`,
         },
