--- a/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/合作團隊成員.html
+++ b/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/合作團隊成員.html
@@ -5,8 +5,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(0)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/765198064.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">黃志弘 教授</p>
                     <p class="collaborative-partner-member-content-department">單位：設計學院</p>
                 </div>
@@ -14,8 +14,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(1)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/569587153.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">黃光廷 教授</p>
                     <p class="collaborative-partner-member-content-department">單位：設計學院</p>
                 </div>
@@ -23,8 +23,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(2)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/444726577.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">陳建文 副教授</p>
                     <p class="collaborative-partner-member-content-department">單位：通識中心</p>
                 </div>
@@ -32,8 +32,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(3)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/6.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/337034549.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">陳圳卿 副教授</p>
                     <p class="collaborative-partner-member-content-department">單位：設計學院</p>
                 </div>
@@ -41,8 +41,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(4)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/504690245.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">黃儀婷 副教授</p>
                     <p class="collaborative-partner-member-content-department">中原大學</p>
                 </div>
@@ -50,8 +50,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(5)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/5.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/5.png"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">李魁鵬 副教授</p>
                     <p class="collaborative-partner-member-content-department">機電學院</p>
                 </div>
@@ -59,8 +59,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(6)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/824110039.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">羅恩加 博士</p>
                     <p class="collaborative-partner-member-content-department">羅慶郎自然農場博士</p>
                 </div>
@@ -110,19 +110,23 @@
         line-height: 1.35;
         letter-spacing: 1px;
     }
+
+    .member-avatar {
+        border-radius: 50%;
+    }
 </style>
 
 <script>
     const collaborativePartnerMember = [
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/765198064.jpg',
             'name': '黃志弘　老師',
             'from': `臺北科技大學建築系教授 兼 設計學院院長`,
             'skill': '社區規劃、原民建築、建築施工設計、都市設計、建築景觀規劃',
             'intro': '2009年起，執行千千岩助太郎校長台灣原住民建築調查測繪圖稿數位典藏計畫，並於 2012 年同楊詩弘教授共同整理出版《千千岩助太郎台灣高砂族住家調查測繪手稿全集》上、下冊，期間已完成 泰雅、布農、雅美等七族數位典藏建置，透過千千岩助太郎 手繪史料應用，於南投眉溪部落賽德克族的傳統家屋復原、尖石國中泰雅部落進行鄉土課程推動，實踐自立造屋「瞭望塔」。',
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/569587153.jpg',
             'name': '黃光廷　老師',
             'from': `臺北科技大學建築系 助理教授`,
             'skill': '都市設計、都市規劃與設計理論、空間構成分析、都市再生與活化、環境行為研究',
